--- a/css/styles.css
+++ b/css/styles.css
@@ -198,6 +198,8 @@ h2 {
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-width: 0;
+  overflow: hidden;
 }
 
 .chart-container {
@@ -208,6 +210,8 @@ h2 {
   width: 100%;
   height: calc(100% - 50px);
   padding: 10px 0;
+  overflow: hidden;
+  min-width: 0;
 }
 
 .chart-wrapper {
@@ -497,6 +501,8 @@ footer {
 .tab-content {
   display: none;
   height: calc(100% - 50px);
+  min-width: 0;
+  overflow: hidden;
 }
 
 .tab-content.active {
